@@ -1,15 +1,17 @@
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+
 plugins {
     java
-    kotlin("jvm") version "1.9.23"
-    id("fabric-loom") version "1.5-SNAPSHOT"
-    kotlin("plugin.serialization") version "1.8.22"
+    kotlin("jvm") version "2.0.20"
+    id("fabric-loom") version "1.7-SNAPSHOT"
+    kotlin("plugin.serialization") version "2.0.20"
 }
 
 group = "de.royzer"
 version = "1.0"
 
-val silkVersion = "1.10.3"
-val minecraftVersion = "1.20.4"
+val silkVersion = "1.10.7"
+val minecraftVersion = "1.21.1"
 
 repositories {
     mavenCentral()
@@ -19,14 +21,16 @@ repositories {
 }
 
 dependencies {
+
     minecraft("com.mojang:minecraft:$minecraftVersion")
     mappings(loom.layered {
-        parchment("org.parchmentmc.data:parchment-1.20.4:2024.02.25@zip")
         officialMojangMappings()
+        parchment("org.parchmentmc.data:parchment-1.21:2024.07.28@zip")
+//        parchment("org.parchmentmc.data:parchment-1.20.2:2023.10.08@zip")
     })
-    modImplementation("net.fabricmc:fabric-loader:0.15.7")
-    modImplementation("net.fabricmc.fabric-api:fabric-api:0.96.4+1.20.4")
-    modImplementation("net.fabricmc:fabric-language-kotlin:1.10.19+kotlin.1.9.23")
+    modImplementation("net.fabricmc:fabric-loader:0.16.5")
+    modImplementation("net.fabricmc.fabric-api:fabric-api:0.103.0+1.21.1")
+    modImplementation("net.fabricmc:fabric-language-kotlin:1.12.1+kotlin.2.0.20")
     modImplementation("net.silkmc:silk-core:$silkVersion")
     modImplementation("net.silkmc:silk-commands:$silkVersion")
     modImplementation("net.silkmc:silk-igui:$silkVersion")
@@ -46,9 +50,11 @@ loom {
 
 tasks {
     withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
-        kotlinOptions.jvmTarget = "17"
+        compilerOptions.jvmTarget.set(JvmTarget.JVM_21)
+//        kotlinOptions.jvmTarget = "21"
     }
     withType<JavaCompile> {
+        options.compilerArgs.add("--enable-preview") // danke trymacs
         options.encoding = "UTF-8"
     }
 }
